public static class PlayerAnimationConstants
{
    public const string IsJumping = "IsJumping";
    public const string IsRolling = "IsRolling";
    public const string StartGameTrigger = "StartGameTrigger";
    public const string DieTrigger = "DieTrigger";
    public const string JumpMultiplier = "JumpMultiplier";
    public const string RollMultiplier = "RollMultiplier";
}
